# fabm-ihamocc

./: README.md
src/: CMakeLists.txt  alkalinization.F90  bromo.F90  carbon.F90  cfc.F90  cisonew.F90  detritus.F90  dms.F90  ihammoc_model_library.F90  ihamocc_model_library.F90  iron.F90  light.F90  mixed_layer.F90  natdic.F90  ndep.F90  nitrogen.F90  oxygen.F90  phytoplankton.F90  preformed_tracer.F90  preftrc.F90  sediment_bypass.F90  shared.F90  tracer.F90  zooplankton.F90
testcases/: fabm.yaml  fabm_with_particle_aggregation.yaml
